--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ python:
   - "nightly" # currently points to 3.6-dev
 
 # command to install dependencies (we have none right now)
-#install: "pip install six"
+install:
+- "pip install -r test_requirements.txt"
 
 # command to run tests
-script: pip install six && nosetests
+script: nosetests
