--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ install:
 - "pip install -r test_requirements.txt"
 
 # command to run tests
-script: nosetests
+script: 
+- python -c "import six; print(six.__file__)"
+- nosetests
